lswr/swresample: Mention the actually supported formats when erroring out.

Fixes ticket #6779.